[gd_scene load_steps=36 format=3 uid="uid://cx1ngkmwvjhn0"]

[ext_resource type="Script" path="res://scripts/friendly.gd" id="1_pwbis"]
[ext_resource type="Texture2D" uid="uid://thuuv4dn5q6p" path="res://assets/Friendly/Death.png" id="3_5kv0l"]
[ext_resource type="Texture2D" uid="uid://cudxygiukva7l" path="res://assets/Friendly/Idle.png" id="5_5srwu"]
[ext_resource type="PackedScene" uid="uid://hbsfct2hwxqm" path="res://scenes/friend_gun.tscn" id="6_7it4q"]
[ext_resource type="Texture2D" uid="uid://mlmpej2cbhmy" path="res://assets/Friendly/Reload.png" id="7_d22de"]
[ext_resource type="Texture2D" uid="uid://bml0b0di7iwn4" path="res://assets/Friendly/Run.png" id="9_48u1y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7m0lb"]
atlas = ExtResource("3_5kv0l")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oxx8"]
atlas = ExtResource("3_5kv0l")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0fo8"]
atlas = ExtResource("3_5kv0l")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbmfe"]
atlas = ExtResource("3_5kv0l")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fppq4"]
atlas = ExtResource("5_5srwu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1umg"]
atlas = ExtResource("7_d22de")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2i3j"]
atlas = ExtResource("7_d22de")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd0xt"]
atlas = ExtResource("7_d22de")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwwsa"]
atlas = ExtResource("7_d22de")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2dd3"]
atlas = ExtResource("7_d22de")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvxpj"]
atlas = ExtResource("7_d22de")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4uvw"]
atlas = ExtResource("7_d22de")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dqlb"]
atlas = ExtResource("7_d22de")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4i8w"]
atlas = ExtResource("7_d22de")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g26t8"]
atlas = ExtResource("7_d22de")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mik4"]
atlas = ExtResource("7_d22de")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqdul"]
atlas = ExtResource("7_d22de")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8ff"]
atlas = ExtResource("7_d22de")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wqec"]
atlas = ExtResource("9_48u1y")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4itxq"]
atlas = ExtResource("9_48u1y")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmqd3"]
atlas = ExtResource("9_48u1y")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_75jyd"]
atlas = ExtResource("9_48u1y")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cnjs"]
atlas = ExtResource("9_48u1y")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnqw5"]
atlas = ExtResource("9_48u1y")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s671s"]
atlas = ExtResource("9_48u1y")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rvhc"]
atlas = ExtResource("9_48u1y")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_iw87b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m0lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oxx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0fo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbmfe")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fppq4")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1umg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2i3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd0xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwwsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2dd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvxpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4uvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dqlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g26t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mik4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqdul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8ff")
}],
"loop": false,
"name": &"reload",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wqec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4itxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmqd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75jyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cnjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnqw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s671s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rvhc")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_un8ii"]
size = Vector2(84.25, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qb64v"]
radius = 16.6667
height = 123.333

[node name="Friendly" type="CharacterBody2D" groups=["friendly", "shootable"]]
position = Vector2(4, 0)
scale = Vector2(3, 3)
collision_layer = 9
collision_mask = 17
script = ExtResource("1_pwbis")
metadata/hp = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.333368, -66.333)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_iw87b")
animation = &"death"

[node name="friendGun" parent="." instance=ExtResource("6_7it4q")]

[node name="GunCollission" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_un8ii")

[node name="BodyColl" type="CollisionShape2D" parent="."]
position = Vector2(-3.33331, 1.52588e-05)
shape = SubResource("CapsuleShape2D_qb64v")

[node name="ShoulderPositionLeft" type="Marker2D" parent="."]
position = Vector2(-15.778, -37.5556)

[node name="ShoulderPositionRight" type="Marker2D" parent="."]
position = Vector2(15.222, -37.5556)

[node name="RayCast2D" type="RayCast2D" parent="." groups=["shootable"]]
position = Vector2(-16.3333, -37.6667)
scale = Vector2(15, 9)
target_position = Vector2(90, 0)
collision_mask = 9
hit_from_inside = true

[node name="StopRC" type="RayCast2D" parent="." groups=["shootable"]]
position = Vector2(-16.3333, -37.6667)
scale = Vector2(15, 9)
target_position = Vector2(70, 0)
collision_mask = 9
hit_from_inside = true
